[package]
name = "rusty-micro-scheme"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["micro-scheme-compiler", "micro-scheme-driver", "micro-scheme-vm"]

[dependencies]
anyhow.workspace = true
micro-scheme-driver = { path = "./micro-scheme-driver" }

[workspace.dependencies]
anyhow = "1.0.71"
thiserror = "1.0.40"
